--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
         function startGame() {
             sendRequest("start", "", function(response) {
                 alert(response);
+                updateGameState();
             });
         }
 
@@ -48,12 +49,26 @@
         // Update the game state (fetch the latest state)
         function updateGameState() {
             sendRequest("state", "", function(response) {
-                document.getElementById("gameState").innerHTML = JSON.parse(response);
-                console.log(JSON.parse(response))
+                var gameState = JSON.parse(response);
+                document.getElementById("gameState").innerHTML = JSON.stringify(gameState, null, 2);
+                
+                // Display player's hand
+                var playCardDiv = document.getElementById("playCard");
+                playCardDiv.innerHTML = ''; // Clear previous cards
+                var currentPlayer = gameState.players[gameState.current_turn];
+                
+                currentPlayer.hand.forEach(function(card, index) {
+                    var cardButton = document.createElement("button");
+                    cardButton.innerHTML = card;
+                    cardButton.onclick = function() {
+                        playCard(gameState.current_turn, card);
+                    };
+                    playCardDiv.appendChild(cardButton);
+                });
             });
         }
 
-    setInterval(updateGameState, 500);
+        setInterval(updateGameState, 500);
     </script>
 </head>
 <body>
@@ -75,7 +90,7 @@
     </div>
 
     <!-- Game Actions Section -->
-    <div id="playCard" style="display: none;">
+    <div id="playCard">
         <!-- Dynamically populated with player cards -->
     </div>
 </body>
