Added gitignore and moved images to their own file

--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
                 cardButton.innerHTML = "+40";
             }
             if(card.split("-")[1] == "reverse") {
-                cardButton.innerHTML = "<img src='./reverse.png' />";
+                cardButton.innerHTML = "<img src='./img/reverse.png' />";
             }
             if(card.split("-")[1] == "skip") {
-                cardButton.innerHTML = "<img src='./skip.png' />";
+                cardButton.innerHTML = "<img src='./img/skip.png' />";
             }
             cardButton.className = card.split("-")[0] + "Card";
             cardButton.onclick = function() {
@@ -125,10 +125,10 @@
                             cardButton.innerHTML = "+40";
                         }
                         if(card.split("-")[1] == "reverse") {
-                            cardButton.innerHTML = "<img src='./reverse.png' />";
+                            cardButton.innerHTML = "<img src='./img/reverse.png' />";
                         }
                         if(card.split("-")[1] == "skip") {
-                            cardButton.innerHTML = "<img src='./skip.png' />";
+                            cardButton.innerHTML = "<img src='./img/skip.png' />";
                         }
                         cardButton.className = card.split("-")[0] + "Card";
                         cardButton.onclick = function() {
